--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,76 @@
-nav ul {
+body,
+html {
+  background-color: aliceblue;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+.my-header {
+  background-color: #000;
+  width: 100%;
+  display: inline-block;
+  height: 48px;
+}
+
+.my-header .inner {
+  display: block;
+}
+.my-header .logo {
+  font-weight: 800;
+  color: white;
+  cursor: pointer;
+  display: inline-block;
+}
+.navigation {
+  background-color: transparent;
+  margin-left: 40px;
+  display: inline-block;
+}
+.navigation ul li a {
+  color: white;
   text-decoration: none;
+}
+.navigation ul li {
+  list-style: none;
+  display: inline-block;
+  margin-right: 20px;
+}
+.navigation ul {
+  margin: 0;
+  padding: 0;
+}
+.hero-banner {
+  position: relative;
+  background-color: thistle;
+  background-image: url(/img/guitar-1.png);
+  height: 750px;
+  background-size: cover;
+}
+.hero-banner .inner {
+  padding-top: 200px;
+}
+.hero-cta {
+  background-color: tomato;
+  border: none;
+  padding: 1em 3em 1em 3em;
+  margin-left: 1em;
+}
+
+.hero-cta a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.hero-banner h1 {
+  font-weight: 800;
+}
+.our-guitar {
+  background-color: white;
+}
+.inner {
+  width: 1080px;
+  margin: 0 auto;
+  border: 1px solid rgb(144, 137, 137);
+}
+.our-guitar . {
 }
